--- a/index.html
+++ b/index.html
@@ -1,197 +1,155 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" type="image/png" href="images/pupilpng.png" sizes="1000x1000" />
-  <style>
-  body {
-    background-image:url(https://vignette.wikia.nocookie.net/teen-titans-go/images/d/d8/Rain.GIF/revision/latest?cb=20150320031929);
-  	background-color:black;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    min-height:100vh;
-
-  }
-
-  ul {
-    height:60vh;
-    width:20vh;
-    display:grid;
-    grid-template-rows: repeat(4,
-      1fr
-      2fr
-      1fr
-    );
-    overflow:hidden;
-
-  }
-
-  li {
-    width:100%;
-    height:100%;
-    grid-column:1/span 1;
-
-    /*--offsetX:10%;*/
-    --offsetX:0%;
-  }
-
-  a {
-    display:block;
-    width:100%;
-    height:100%;
-  }
-
-  img {
-    display:block;
-    width:100%;
-    height:100%;
-    object-fit:cover;
-  }
-
-  li:first-of-type {
-    grid-row:1/span 4;
-    /*total=5fr*/clip-path:polygon(100% calc(20% * -1), 0 calc(20%), 0 100%, 100% calc(20%*3));
-  }
-
-  li:nth-of-type(2) {
-    grid-row:3/span 5;
-    /*total=6fr*/clip-path:polygon(100% 0, 0 calc(16.6%*2), 0 100%, 100% calc(16.6%*4));
-  }
-
-  li:nth-of-type(3) {
-    grid-row:6/span 5;
-    /*total=6fr*/clip-path:polygon(100% 0, 0 calc(16.6%*2), 0 100%, 100% calc(16.6%*4));
-  }
-
-  li:last-of-type {
-    grid-row:-5/span 4;
-    /*total=5fr*/clip-path:polygon(100% 0, 0 calc(20%*2), 0 calc(20%*6), 100% calc(20%*4))
-  }
-
-
-
-
-  /*
-  anim
-  */
-  @keyframes o {
-    from {transform:translate(0);}
-  }
-
-  li:nth-of-type(odd) a {
-    transform:translate(var(--offsetX), calc(var(--offsetX) * 0.166 * -2));
-    animation:o 2s;
-  }
-
-  li:nth-of-type(even) a {
-    transform:translate(calc(var(--offsetX)*-1), calc(var(--offsetX) * 0.166 * 2));
-    animation:o 2s;
-  }
-
-  /*first and last hv diff slope; first=last=2/5fr regular=2/6fr; */
-
-  li:first-of-type a {
-    transform:translate(var(--offsetX), calc(var(--offsetX) * 0.200 * -2));
-  }
-
-  li:last-of-type a {
-    transform:translate(calc(var(--offsetX) * -1), calc(var(--offsetX) * 0.200 * 2));
-  }
-
-  img {
-    animation:blr 2s;
-    filter:blur(10px);
-  } @keyframes blr {
-    from {filter:blur(0)}
-  }
-
-
-
-
-  /*
-  hover & vfx
-  */
-  li {
-    transition:opacity 0.3s;
-  }
-  li a {
-    transition:all 0.15s;
-  }
-  li:hover a {
-    transition:transform 0.3s;
-    transform:translate(0);
-  }
-
-  ul:hover li {
-    opacity:0.1;
-  }
-  ul:hover li:hover {
-    opacity:1;
-    transition:clip-path 0.4s 0.3s;
-    clip-path:polygon(100% 0, 0 0, 0 100%, 100% 100%);
-    z-index:10;
-  }
-
-  img {
-    filter:blur(10px);
-    transition:filter 0.7s;
-  }
-  li:hover img {
-    filter:blur(0);
-  }
-
-  /* width */
-  ::-webkit-scrollbar {
-      width: 10px;
-  }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-      background: #222;
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-      background: #111;
-  }
-
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-      background: #555;
-  }
-
-  .border {
-
-    border-style:solid;
-    color:white;
-
-  }
-  .margin {
-    margin-right:40px;
-
-  }
-
-  </style>
-
-
-
-  <script language="javascript">
-          if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
-            location.href = '/mobile';}
-          </script>
-
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <title>「ｒｅ：Ｌｉｖｅ」</title>
-</head>
-<body>
+  <link rel="icon" type="image/png" href="../images/pupilpng.png" sizes="1000x1000" />
+  <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
+  <link type="text/css" rel="stylesheet" media="screen and (max-width: 800px)" href="stylesheetU800px.css">
 
-  <base/>
-  <div class="border">
-  <ul class="margin">
-    <li><a href="/blog"><img src="https://thumbs.gfycat.com/EqualOblongChrysalis-size_restricted.gif"/></a></li>
-    <li><a href="/info"><img src="https://78.media.tumblr.com/2e34b1e7d866447086c3d4c50491cd9b/tumblr_p9pzfdBtUF1w0qmx4o1_500.gif"/></a></li>
-    <li><a href="/chat"><img src="https://media.giphy.com/media/Q9qWRZr54bYTS/giphy.gif"/></a></li>
-    <li><a href="/navigation"><img src="https://78.media.tumblr.com/37643ea76f87926c4b608993b60ac592/tumblr_nsbqx3Pe3f1ub5x7oo1_500.gif"/></a></li>
-  </ul>
-</div>
-</body>
-</html>
+  </head>
+
+  <body>
+    <div id="myNav" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content">
+      <a href="..">Home</a>
+      <a href="../info">Info</a>
+      <a href="../chat">Chat</a>
+      <a href="../navigation">Navigation</a>
+    </div>
+  </div>
+  <div id="navbar">
+    <h1> <span class="" id="fontcolor"> &lceil;&nbsp;&nbsp;&nbsp;re:Live / Sight&nbsp;&nbsp;&nbsp;&rfloor;
+    </span><br>
+    <br>
+
+  </h1>
+  </div>
+  <div id="navbar">
+
+      <span id="note"> <span class="del6s">║</span><span class="del5s">▒</span><span class="del4s">░</span> <span class="del2s">║</span><span class="del1s5ms">▒</span><span class="del1s">░</span> <span class="Bfast">a l i v e  t o d a y</span> <span class="del1s">░</span><span class="del1s5ms">▒</span><span class="del2s">║</span> <span class="del4s">░</span><span class="del5s">▒</span><span class="del6s">║</span> </span>
+    <br />
+    <br />
+    <p class="intro"> personal site </p>
+    <br />
+    <p class="copy"> Copyright &copy; 2018-XXXX </p>
+    <img class="logo" src="../images/logoprev2.gif" />
+    <p id="navline"> <a href="../" id="fontcolor">Home</a> ︱ <a href="../info" id="fontcolor">Info</a> ︱ <a href="../chat" id="fontcolor">Chat</a> ︱ <a href="../test" id="fontcolor">Test</a> ︱ <a href="../cube" id="fontcolor">Cube</a> <br />
+      <a href="../dev" id="fontcolor">Dev</a> ︱ <a href="../navigation" id="fontcolor">Navigate</a> ︱ <a href="../write" id="fontcolor">Write</a> </p>
+    <hr />
+    <br />
+    You are alive.<br>
+    <span id="fontcolor" style="cursor:pointer" onclick="openNav()">[/Remove That Choice/]</span> <br />
+    <br />
+  </div>
+  <div class="article">
+    <div class="iconA"></div>
+    <h1>update</h1>
+    <h5 class="author">-Cabandadan<br />
+    </h5>
+    <h5 class="date">1.8.19</h5>
+    <br />
+    <br />
+    <hr />
+    <p> new <P>
+    <p id="fontcolor"> reason for joining:</p>
+    <p id="fontcolor"> improvement</p>
+    <p id="fontcolor"> thats it。</p>
+    <p id="fontcolor"> have a good year。</p>
+    <br>
+    <br>
+  </div>
+  <div class="article">
+    <div class="iconA"></div>
+    <h1>El Psy Congroo</h1>
+    <h5 class="author">-Cabandadan<br />
+    </h5>
+    <h5 class="date">9.15.18</h5>
+    <br />
+    <br />
+    <hr />
+    <p> steins;gate <P>
+    <p id="fontcolor"> 宇宙に始まりはあるが終わりはない。　—-無限</p>
+    <p id="fontcolor">星にもまた始まりはあるが、自らの力をもって滅び逝く。　—-有限</p>
+    <p id="fontcolor">英知を持つ者こそ、最も愚かであること。歴史からも読み取れる。</p>
+    <p id="fontcolor">海に生ける魚は、陸の世界を知らない。彼らが英知を持てば、それもまた滅び逝く。</p>
+    <p id="fontcolor">人間が光の速さを超えるのは、魚たちが陸で生活を始めるよりも滑稽。</p>
+    <p id="fontcolor">これは抗える者たちに対する、神からの最後通告とも言えよう。</p>
+    <br>
+    <br>
+  </div>
+  <div class="article">
+    <div class="iconA"></div>
+    <h1>theory of relative reality perception</h1>
+    <h5 class="author">-Cabandadan<br />
+    </h5>
+    <h5 class="date">9.11.18</h5>
+    <br />
+    <br />
+    <hr />
+    <p> a conecpt <P>
+    <p id="fontcolor"> the concept of dimensional reality makes use of the existence of dimensional planes in which objects
+    exist. humans are capable of perceiving three dimensions, arbitrarily labeled 1, 2, 3 for example purpopses. objects cannot
+    perceive other objects that exist outside of their dimensional plane but can see the portions that overlap. theoretically, say
+    the earth existed in planes: 1-6, then another species of three dimensional form could exist as well in the plans, 4-6. </p>
+    <p id="fontcolor">alien existence may be no further than our own planet, but unfathomably powerful technology would be necessary to prove
+    this claim, or to come to any point of recognizing it as viable. </p>
+    <p id="fontcolor">let's stick to spacraft for now.</p>
+    <br>
+    <br>
+  </div>
+
+  <div class="article">
+    <div class="iconA"></div>
+    <h1>a new chapter: </h1>
+    <h5 class="author">-Cabandadan<br />
+    </h5>
+    <h5 class="date">9.10.18</h5>
+    <br />
+    <br />
+    <hr />
+    <p> a past day <P>
+    <p id="fontcolor">it began as any other, started with perception as if not all, filler information didnt matter anyway
+    as everything would continue on as such, stopping it wouldnt matter either, for it could continue without fault. though
+    none of that stopped it from taking the occasional stop to view the scene, or even further to view the time, the question
+    of a placeholder mattered not to it, for its existence was purposeful in of itself. </p>
+    <p id="fontcolor">it began as any other, started with perception as if not all, filler information didnt matter anyway
+    as everything would continue on as such, stopping it wouldnt matter either, for it could continue without fault. though
+    none of that stopped it from taking the occasional stop to view the scene, or even further to view the time, the question
+    of a placeholder mattered not to it, for its existence was purposeful in of itself. </p>
+    <p id="fontcolor">it began as any other, started with perception as if not all, filler information didnt matter anyway
+    as everything would continue on as such, stopping it wouldnt matter either, for it could continue without fault. though
+    none of that stopped it from taking the occasional stop to view the scene, or even further to view the time, the question
+    of a placeholder mattered not to it, for its existence was purposeful in of itself. </p>
+    <p id="fontcolor">it began as any other, started with perception as if not all, filler information didnt matter anyway
+    as everything would continue on as such, stopping it wouldnt matter either, for it could continue without fault. though
+    none of that stopped it from taking the occasional stop to view the scene, or even further to view the time, the question
+    of a placeholder mattered not to it, for its existence was purposeful in of itself. </p>
+    <p id="fontcolor">it began as any other, started with perception as if not all, filler information didnt matter anyway
+    as everything would continue on as such, stopping it wouldnt matter either, for it could continue without fault. though
+    none of that stopped it from taking the occasional stop to view the scene, or even further to view the time, the question
+    of a placeholder mattered not to it, for its existence was purposeful in of itself. </p>
+    <br>
+    <br>
+  </div>
+
+  <br>
+  <br>
+
+  <script>
+  /* Open */
+  function openNav() {
+      document.getElementById("myNav").style.height = "100%";
+  }
+
+  /* Close */
+  function closeNav() {
+      document.getElementById("myNav").style.height = "0%";
+  }
+  </script>
+
+  </body>
+
+  </html>
