various stylistic changes for the moment

--- a/test/index.html
+++ b/test/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <title>「ｒｅ：Ｌｉｖｅ」</title>
   <link rel="icon" type="image/png" href="../images/pupilpng.png" sizes="1000x1000" />
-  <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
-  <link type="text/css" rel="stylesheet" media="screen and (max-width: 800px)" href="stylesheetU800px.css">
+  <link rel="stylesheet" type="text/css" href="test.css">
+  <link type="text/css" rel="stylesheettest" media="screen and (max-width: 800px)" href="stylesheetU800px.css">
 
   </head>
 
@@ -35,7 +35,7 @@
     <p class="intro"> personal site </p>
     <br />
     <p class="copy"> Copyright &copy; 2018-XXXX </p>
-    <img class="logo" src="../images/logoprev2.gif" />
+    <img class="logo" src="../images/giphy.gif" />
     <p id="navline"> <a href="../" id="fontcolor">Home</a> ︱ <a href="../info" id="fontcolor">Info</a> ︱ <a href="../chat" id="fontcolor">Chat</a> ︱ <a href="../test" id="fontcolor">Test</a> ︱ <a href="../cube" id="fontcolor">Cube</a> <br />
       <a href="../dev" id="fontcolor">Dev</a> ︱ <a href="../navigation" id="fontcolor">Navigate</a> ︱ <a href="../write" id="fontcolor">Write</a> </p>
     <hr />
