--- a/test/indextwo.html
+++ b/test/indextwo.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="testtwo.css">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>shishka ✿ new</title>
+<title>「ｒｅ：Ｌｉｖｅ」</title>
 <!-- InstanceEndEditable -->
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="a collection of stuff and things from the web archive.">
@@ -21,30 +21,30 @@
 <div class="row rowRowFightThePower">
 <div class="col-sm-12 col-md-3 contentLeft">
 	<h1 style="margin-bottom:30px;"><img src="title0000.png" alt="shishka" class="img-center img-title"></h1>
-  <img src="img/navi-main.png" class="naviBanners">
-  	<a href="../index.html" class="navi"><img src="img/bull.png">Splash</a>
-  	<a href="new.html" class="navi"><img src="img/bull.png">New</a>
+  <img src="navigation/navig-main.png" class="naviBanners">
+  	<a href="../index.html" class="navi"><img src="navigation/flow.png">blog</a>
+  	<a href="new.html" class="navi"><img src="navigation/flow.png">bio</a>
+		<a href="kao.html" class="navi"><img src="navigation/flow.png">chat</a>
+		  	<a href="videos.html" class="navi"><img src="navigation/flow.png">reference</a>
 
-  <img src="img/navi-graphics.png" class="naviBanners" style="margin-top:20px;">
-    <a href="anime.html" class="navi"><img src="img/bull.png">Anime</a>
-    <a href="blinkies.html" class="navi"><img src="img/bull.png">Blinkies</a>
-    <a href="buttons.html" class="navi"><img src="img/bull.png">Buttons</a>
-    <a href="icons.html" class="navi"><img src="img/bull.png">Icons</a>
-    <a href="kao.html" class="navi"><img src="img/bull.png">Kao</a>
-    <a href="videogames.html" class="navi"><img src="img/bull.png">Videogames</a>
+  <img src="navigation/navi-rite.png" class="naviBanners" style="margin-top:20px;">
+    <a href="anime.html" class="navi"><img src="navigation/flow.png">projects</a>
+    <a href="blinkies.html" class="navi"><img src="navigation/flow.png">ani-notes</a>
+    <a href="links.html" class="navi"><img src="navigation/flow.png">code</a>
+		<a href="buttons.html" class="navi"><img src="navigation/flow.png">build-guides</a>
+    <a href="videogames.html" class="navi"><img src="navigation/flow.png">video-games</a>
 
-  <img src="img/navi-shrines.png" class="naviBanners" style="margin-top:20px;">
-    <a href="jotaro.html" class="navi"><img src="img/bull.png">Jotaro</a>
 
-  <img src="img/navi-other-stuff.png" class="naviBanners" style="margin-top:20px;">
-    <a href="art.html" class="navi"><img src="img/bull.png">Art</a>
-    <a href="links.html" class="navi"><img src="img/bull.png">Links</a>
-    <a href="music.html" class="navi"><img src="img/bull.png">Music</a>
-    <a href="neopets.html" class="navi"><img src="img/bull.png">Neopets</a>
-  	<a href="videos.html" class="navi"><img src="img/bull.png">Videos</a>
+  <img src="navigation/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
+    <a href="jotaro.html" class="navi"><img src="navigation/flow.png">video</a>
+    <a href="art.html" class="navi"><img src="navigation/flow.png">art</a>
+
+  <img src="navigation/navig-othr.png" class="naviBanners" style="margin-top:20px;">
+    <a href="music.html" class="navi"><img src="navigation/flow.png">music</a>
+  	<a href="videos.html" class="navi"><img src="navigation/flow.png">videos</a>
 
 	<div style="margin:30px 0;">
-	<a href="new.html"><img src="img/link.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
+	<a href="new.html"><img src="../images/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
 </div>
 
 <div class="col-sm-12 col-md-9 contentRight">
@@ -53,90 +53,90 @@
 <!-- InstanceBeginEditable name="pgContent" -->
 
 	<div class="col-sm-12">
-      <h1>『Welcome To Sight』</h1>
-      <p>maybe a collection of stuff and things from the web archive. maybe more.</p>
+      <h1>『Re Sight』</h1>
+      <p>no matter where you go, everyone's connected. welcome to my connection</p>
     </div>
     <div class="col-sm-12">
-      <h2>What's the good word, Shinji?</h2>
+      <h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>
 			<img class="logo" src="../images/ddd.gif" />
       <div class="row imgPixel">
-				<div class="col-sm-3 col-md-2"><img src="../images/qqqqq.gif" class="img-center"></div>
+				<div class="col-sm-3 col-md-2"><img src="../images/tell.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
-          <h3 style="margin-bottom:10px;">1/8/20 <img src="img/press-turn.gif" class="new"></h3>
-          <p style="margin-bottom:30px;">pump up the <a href="music.html">jam</a>. new page.</p>
+          <h3 style="margin-bottom:10px;">1/17/20 <img src="navigation/flow.png" class="new"></h3>
+          <p style="margin-bottom:30px;">pump up the jam. new page.</p>
         </div>
 
         <div class="col-sm-3 col-md-2"><img src="../images/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
-          <h3 style="margin-bottom:10px;">1/8/20 <img src="img/press-turn.gif" class="new"></h3>
-          <p style="margin-bottom:30px;">pump up the <a href="music.html">jam</a>. new page.</p>
+          <h3 style="margin-bottom:10px;">1/8/20 </h3>
+          <p style="margin-bottom:30px;">physical reality is nothing but an illusion</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="../images/qqqqq.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/tell.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">12/28/19</h3>
-          <p style="margin-bottom:30px;">maybe f*ntlibrary will behave today.</p>
+          <p style="margin-bottom:30px;">maybe engines will behave today.</p>
         </div>
 
         <div class="col-sm-3 col-md-2"><img src="../images/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/10/19</h3>
-          <p style="margin-bottom:30px;">new page for <a href="art.html">my art</a> and some small layout changes for now... more to come?</p>
+          <p style="margin-bottom:30px;">new pages will be done soon... more to come?</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="../images/qqqqq.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/tell.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/25/19</h3>
-          <p style="margin-bottom:30px;">new section for shrines. here's my <a href="jotaro.html">first one</a>. now you know that i am invalid.</p>
+          <p style="margin-bottom:30px;">i stan tron legacy. now you know, i am invalid.</p>
         </div>
 
         <div class="col-sm-3 col-md-2"><img src="../images/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">7/15/19</h3>
-          <p style="margin-bottom:30px;">F*ntlibrary keeps (pstump voice) goin' DOWN DOWN, which makes this place go down too (or load mega slow), so now we're using some basic courier 'til I find an alternative. Anyone out there know of a site like F*ntlibrary or G**gle Fonts that isn't perpetually down or owned by the devil but is also free? Apparently that's a lot to ask for x: I found f*ntsforweb and p*gecdn easyf*nts but I don't think I trust them.</p>
+          <p style="margin-bottom:30px;">m*necraft server!</p>
         </div>
 
-      <div class="col-sm-3 col-md-2"><img src="../images/qqqqq.gif"" class="img-center"></div>
+      <div class="col-sm-3 col-md-2"><img src="../images/tell.gif"" class="img-center"></div>
       <div class="col-sm-9 col-md-offset-1">
         <h3 style="margin-bottom:10px;">6/30/19</h3>
-        <p style="margin-bottom:30px;">We got <a href="https://www.geocities.ws/jaup/jaup.htm" target="_blank">JAUP'd</a>! Fancy (∿°○°)∿♡</p>
+        <p style="margin-bottom:30px;">hey look <a href="https://artbreeder.com/browse" target="_blank">...art...</a> fancy (∿°○°)∿♡</p>
       </div>
 
         <div class="row imgPixel">
           <div class="col-sm-3 col-md-2"><img src="../images/uu2.gif"" class="img-center"></div>
           <div class="col-sm-9 col-md-offset-1">
             <h3 style="margin-bottom:10px;">6/15/19</h3>
-            <p style="margin-bottom:30px;">B**tstrap gets booted in favor of mini.css. No javascript allowed in my css m*necraft server!</p>
+            <p style="margin-bottom:30px;">everything that lives is designed to end. we are perpetually trapped in a never-ending spiral of life and death. is this a curse? or some kind of punishment? i often think about the god who blessed us with this cryptic puzzle...and wonder if we'll ever get the chance to kill him.</p>
           </div>
 
-        <div class="col-sm-3 col-md-2"><img src="../images/qqqqq.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/tell.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
-          <h3 style="margin-bottom:10px;">6/8/19</h3>
-          <p style="margin-bottom:30px;">Removed G**gle Fonts (G**gle is stinky) &amp; bloated scrollbar css/js. B**tstrap is also unnecessarily large so I'll replace that, too. JavaScript is a waste. I have a 2nd half to the site in progress but it's still a ways out.</p>
+          <h3 style="margin-bottom:10px;">3/8/19</h3>
+          <p style="margin-bottom:30px;">since this website will inevitably be updated in january of 2020 this entry isn't real.</p>
         </div>
 
         <div class="col-sm-3 col-md-2"><img src="../images/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/18/18</h3>
-          <p style="margin-bottom:30px;">welcome to shishka's wacky web world—the official britney spears webring.</p>
+          <p style="margin-bottom:30px;">welcome to ren's riot of a web space—my official webring to a(rt)nime.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="../images/qqqqq.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/tell.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
-          <h3 style="margin-bottom:10px;">10/28/18</h3>
-          <p style="margin-bottom:30px;">ow my achin eczema. got a few things up.</p>
+          <h3 style="margin-bottom:10px;">10/27/18</h3>
+          <p style="margin-bottom:30px;">livin life, shakin strife, wont know, wont go,</p>
         </div>
 
         <div class="col-sm-3 col-md-2"><img src="../images/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
-          <h3 style="margin-bottom:10px;">10/27/18</h3>
-          <p style="margin-bottom:30px;">hey gamers.</p>
+          <h3 style="margin-bottom:10px;">09/10/18</h3>
+          <p style="margin-bottom:30px;">log: a new beginning</p>
         </div>
       </div>
     </div>
 
 	<div class="col-sm-12">
-      <img src="../shishka/img/controls.png" style="margin-left:auto;display:block;width:150px;height:auto;margin-top:50px;">
+      <img src="../images/original.png" style="margin-left:auto;display:block;width:150px;height:auto;margin-top:50px;">
     </div>
 <!-- InstanceEndEditable -->
 
