--- a/index.html
+++ b/index.html
@@ -1,155 +1,149 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"><!-- InstanceBegin template="/Templates/shishka.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=0.5">
-  <title>「ｒｅ：Ｌｉｖｅ」</title>
-  <link rel="icon" type="image/png" href="../images/pupilpng.png" sizes="1000x1000" />
-  <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
-  <link type="text/css" rel="stylesheet" media="screen and (max-width: 800px)" href="stylesheetU800px.css">
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<link rel="stylesheet" href="css/stylesheet.css">
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>「ｒｅ：Ｌｉｖｅ」</title>
+<!-- InstanceEndEditable -->
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="a collection of stuff and things from the web archive.">
+<meta name="keywords" content="buttons, blinkies, gifs, icons, 00s, 90s, videogames, anime">
+<meta name="author" content="omnisairen">
+<link rel="icon" type="image/png" href="images/home/pupilpng.png" sizes="1000x1000" />
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/sometype-mono" type="text/css"/>
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
+</head>
 
-  </head>
+<body>
 
-  <body>
-    <div id="myNav" class="overlay">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <div class="overlay-content">
-      <a href="..">Home</a>
-      <a href="../info">Info</a>
-      <a href="../chat">Chat</a>
-      <a href="../navigation">Navigation</a>
+<div class="row rowRowFightThePower">
+<div class="col-sm-12 col-md-3 contentLeft">
+	<h1 style="margin-bottom:30px;"><img src="images/home/title0000.png" alt="RE:LIVE" class="img-center img-title"></h1>
+  <img src="images/nav/navig-main.png" class="naviBanners">
+  	<a href="../index.html" class="navi"><img src="images/nav/flow.png">blog</a>
+  	<a href="new.html" class="navi"><img src="images/nav/flow.png">bio</a>
+		<a href="kao.html" class="navi"><img src="images/nav/flow.png">chat</a>
+		  	<a href="videos.html" class="navi"><img src="images/nav/flow.png">reference</a>
+
+  <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
+    <a href="anime.html" class="navi"><img src="images/nav/flow.png">projects</a>
+    <a href="blinkies.html" class="navi"><img src="images/nav/flow.png">ani-notes</a>
+    <a href="links.html" class="navi"><img src="images/nav/flow.png">code</a>
+		<a href="buttons.html" class="navi"><img src="images/nav/flow.png">build-guides</a>
+    <a href="videogames.html" class="navi"><img src="images/nav/flow.png">video-games</a>
+
+
+  <img src="images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
+    <a href="jotaro.html" class="navi"><img src="images/nav/flow.png">video</a>
+    <a href="art.html" class="navi"><img src="images/nav/flow.png">art</a>
+
+  <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
+    <a href="music.html" class="navi"><img src="images/nav/flow.png">music</a>
+  	<a href="videos.html" class="navi"><img src="images/nav/flow.png">videos</a>
+
+	<div style="margin:30px 0;">
+	<a href="new.html"><img src="images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
+</div>
+
+<div class="col-sm-12 col-md-9 contentRight">
+  <div class="row">
+
+<!-- InstanceBeginEditable name="pgContent" -->
+
+	<div class="col-sm-12">
+      <h1>『Re Sight』</h1>
+      <p>no matter where you go, everyone's connected. welcome to my connection</p>
     </div>
+    <div class="col-sm-12">
+      <h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>
+			<img class="logo" src="images/home/ddd.gif" />
+      <div class="row imgPixel">
+				<div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">1/17/20 <img src="images/nav/flow.png" class="new"></h3>
+          <p style="margin-bottom:30px;">pump up the jam. new page.</p>
+        </div>
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">1/8/20 </h3>
+          <p style="margin-bottom:30px;">physical reality is nothing but an illusion</p>
+        </div>
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">12/28/19</h3>
+          <p style="margin-bottom:30px;">maybe engines will behave today.</p>
+        </div>
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">11/10/19</h3>
+          <p style="margin-bottom:30px;">new pages will be done soon... more to come?</p>
+        </div>
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">10/25/19</h3>
+          <p style="margin-bottom:30px;">i stan tron legacy. now you know, i am invalid.</p>
+        </div>
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">7/15/19</h3>
+          <p style="margin-bottom:30px;">m*necraft server!</p>
+        </div>
+
+      <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+      <div class="col-sm-9 col-md-offset-1">
+        <h3 style="margin-bottom:10px;">6/30/19</h3>
+        <p style="margin-bottom:30px;">hey look <a href="https://artbreeder.com/browse" target="_blank">...art...</a> fancy (∿°○°)∿♡</p>
+      </div>
+
+        <div class="row imgPixel">
+          <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+          <div class="col-sm-9 col-md-offset-1">
+            <h3 style="margin-bottom:10px;">6/15/19</h3>
+            <p style="margin-bottom:30px;">everything that lives is designed to end. we are perpetually trapped in a never-ending spiral of life and death. is this a curse? or some kind of punishment? i often think about the god who blessed us with this cryptic puzzle...and wonder if we'll ever get the chance to kill him.</p>
+          </div>
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">3/8/19</h3>
+          <p style="margin-bottom:30px;">since this website will inevitably be updated in january of 2020 this entry isn't real.</p>
+        </div>
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">11/18/18</h3>
+          <p style="margin-bottom:30px;">welcome to ren's riot of a web space—my official webring to a(rt)nime.</p>
+        </div>
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">10/27/18</h3>
+          <p style="margin-bottom:30px;">livin life, shakin strife, wont know, wont go,</p>
+        </div>
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">09/10/18</h3>
+          <p style="margin-bottom:30px;">log: a new beginning</p>
+        </div>
+      </div>
+    </div>
+
+	<div class="col-sm-12">
+      <img src="images/home/original.png" style="margin-left:auto;display:block;width:150px;height:auto;margin-top:50px;">
+    </div>
+<!-- InstanceEndEditable -->
+
   </div>
-  <div id="navbar">
-    <h1> <span class="" id="fontcolor"> &lceil;&nbsp;&nbsp;&nbsp;re:Live / Sight&nbsp;&nbsp;&nbsp;&rfloor;
-    </span><br>
-    <br>
+</div>
+</div>
+</div>
 
-  </h1>
-  </div>
-  <div id="navbar">
-
-      <span id="note"> <span class="del6s">║</span><span class="del5s">▒</span><span class="del4s">░</span> <span class="del2s">║</span><span class="del1s5ms">▒</span><span class="del1s">░</span> <span class="Bfast">a l i v e  t o d a y</span> <span class="del1s">░</span><span class="del1s5ms">▒</span><span class="del2s">║</span> <span class="del4s">░</span><span class="del5s">▒</span><span class="del6s">║</span> </span>
-    <br />
-    <br />
-    <p class="intro"> personal site </p>
-    <br />
-    <p class="copy"> Copyright &copy; 2018-XXXX </p>
-    <img class="logo" src="../images/logoprev2.gif" />
-    <p id="navline"> <a href="../" id="fontcolor">Home</a> ︱ <a href="../info" id="fontcolor">Info</a> ︱ <a href="../chat" id="fontcolor">Chat</a> ︱ <a href="../test" id="fontcolor">Test</a> ︱ <a href="../cube" id="fontcolor">Cube</a> <br />
-      <a href="../dev" id="fontcolor">Dev</a> ︱ <a href="../navigation" id="fontcolor">Navigate</a> ︱ <a href="../write" id="fontcolor">Write</a> </p>
-    <hr />
-    <br />
-    You are alive.<br>
-    <span id="fontcolor" style="cursor:pointer" onclick="openNav()">[/Remove That Choice/]</span> <br />
-    <br />
-  </div>
-  <div class="article">
-    <div class="iconA"></div>
-    <h1>update</h1>
-    <h5 class="author">-Cabandadan<br />
-    </h5>
-    <h5 class="date">1.8.19</h5>
-    <br />
-    <br />
-    <hr />
-    <p> new <P>
-    <p id="fontcolor"> reason for joining:</p>
-    <p id="fontcolor"> improvement</p>
-    <p id="fontcolor"> thats it。</p>
-    <p id="fontcolor"> have a good year。</p>
-    <br>
-    <br>
-  </div>
-  <div class="article">
-    <div class="iconA"></div>
-    <h1>El Psy Congroo</h1>
-    <h5 class="author">-Cabandadan<br />
-    </h5>
-    <h5 class="date">9.15.18</h5>
-    <br />
-    <br />
-    <hr />
-    <p> steins;gate <P>
-    <p id="fontcolor"> 宇宙に始まりはあるが終わりはない。　—-無限</p>
-    <p id="fontcolor">星にもまた始まりはあるが、自らの力をもって滅び逝く。　—-有限</p>
-    <p id="fontcolor">英知を持つ者こそ、最も愚かであること。歴史からも読み取れる。</p>
-    <p id="fontcolor">海に生ける魚は、陸の世界を知らない。彼らが英知を持てば、それもまた滅び逝く。</p>
-    <p id="fontcolor">人間が光の速さを超えるのは、魚たちが陸で生活を始めるよりも滑稽。</p>
-    <p id="fontcolor">これは抗える者たちに対する、神からの最後通告とも言えよう。</p>
-    <br>
-    <br>
-  </div>
-  <div class="article">
-    <div class="iconA"></div>
-    <h1>theory of relative reality perception</h1>
-    <h5 class="author">-Cabandadan<br />
-    </h5>
-    <h5 class="date">9.11.18</h5>
-    <br />
-    <br />
-    <hr />
-    <p> a conecpt <P>
-    <p id="fontcolor"> the concept of dimensional reality makes use of the existence of dimensional planes in which objects
-    exist. humans are capable of perceiving three dimensions, arbitrarily labeled 1, 2, 3 for example purpopses. objects cannot
-    perceive other objects that exist outside of their dimensional plane but can see the portions that overlap. theoretically, say
-    the earth existed in planes: 1-6, then another species of three dimensional form could exist as well in the plans, 4-6. </p>
-    <p id="fontcolor">alien existence may be no further than our own planet, but unfathomably powerful technology would be necessary to prove
-    this claim, or to come to any point of recognizing it as viable. </p>
-    <p id="fontcolor">let's stick to spacraft for now.</p>
-    <br>
-    <br>
-  </div>
-
-  <div class="article">
-    <div class="iconA"></div>
-    <h1>a new chapter: </h1>
-    <h5 class="author">-Cabandadan<br />
-    </h5>
-    <h5 class="date">9.10.18</h5>
-    <br />
-    <br />
-    <hr />
-    <p> a past day <P>
-    <p id="fontcolor">it began as any other, started with perception as if not all, filler information didnt matter anyway
-    as everything would continue on as such, stopping it wouldnt matter either, for it could continue without fault. though
-    none of that stopped it from taking the occasional stop to view the scene, or even further to view the time, the question
-    of a placeholder mattered not to it, for its existence was purposeful in of itself. </p>
-    <p id="fontcolor">it began as any other, started with perception as if not all, filler information didnt matter anyway
-    as everything would continue on as such, stopping it wouldnt matter either, for it could continue without fault. though
-    none of that stopped it from taking the occasional stop to view the scene, or even further to view the time, the question
-    of a placeholder mattered not to it, for its existence was purposeful in of itself. </p>
-    <p id="fontcolor">it began as any other, started with perception as if not all, filler information didnt matter anyway
-    as everything would continue on as such, stopping it wouldnt matter either, for it could continue without fault. though
-    none of that stopped it from taking the occasional stop to view the scene, or even further to view the time, the question
-    of a placeholder mattered not to it, for its existence was purposeful in of itself. </p>
-    <p id="fontcolor">it began as any other, started with perception as if not all, filler information didnt matter anyway
-    as everything would continue on as such, stopping it wouldnt matter either, for it could continue without fault. though
-    none of that stopped it from taking the occasional stop to view the scene, or even further to view the time, the question
-    of a placeholder mattered not to it, for its existence was purposeful in of itself. </p>
-    <p id="fontcolor">it began as any other, started with perception as if not all, filler information didnt matter anyway
-    as everything would continue on as such, stopping it wouldnt matter either, for it could continue without fault. though
-    none of that stopped it from taking the occasional stop to view the scene, or even further to view the time, the question
-    of a placeholder mattered not to it, for its existence was purposeful in of itself. </p>
-    <br>
-    <br>
-  </div>
-
-  <br>
-  <br>
-
-  <script>
-  /* Open */
-  function openNav() {
-      document.getElementById("myNav").style.height = "100%";
-  }
-
-  /* Close */
-  function closeNav() {
-      document.getElementById("myNav").style.height = "0%";
-  }
-  </script>
-
-  </body>
-
-  </html>
+</body>
+<!-- InstanceEnd --></html>
