--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">7/15/19</h3>
-          <p style="margin-bottom:30px;">m*necraft server!</p>
+          <p style="margin-bottom:30px;">m*necraft server! also @f*ntface sucks.</p>
         </div>
 
       <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
