--- a/404.html
+++ b/404.html
@@ -400,7 +400,7 @@
   		<h1 t="404">re:Live</h1>
   		<div class="bottom">
   			<p>You have lost your way</p>
-  			<a href="https://relivesight.tk/">return</a>
+  			<a href="https://relivesight.com/">return</a>
   		</div>
   	</div>
   </section>
