--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><!-- InstanceBegin template="/Templates/omni.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" href="css/stylesheet.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>「ｒｅ：Ｌｉｖｅ」</title>
 <!-- InstanceEndEditable -->
@@ -10,45 +10,41 @@
 <meta name="description" content="a collection of stuff and things from the web archive.">
 <meta name="keywords" content="buttons, blinkies, gifs, icons, 00s, 90s, videogames, anime">
 <meta name="author" content="omnisairen">
-<link rel="icon" type="image/png" href="images/home/pupilpng.png" sizes="1000x1000" />
+<link rel="icon" type="image/png" href="../images/home/pupilpng.png" sizes="1000x1000" />
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/sometype-mono" type="text/css"/>
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 </head>
-<script language="javascript">
-          if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
-            location.href = '/mobile';}
-          </script>
 
 <body>
 
 <div class="row rowRowFightThePower">
 <div class="col-sm-12 col-md-3 contentLeft">
-	<h1 style="margin-bottom:30px;"><img src="images/home/title0000.png" alt="RE:LIVE" class="img-center img-title"></h1>
-  <img src="images/nav/navig-main.png" class="naviBanners">
-  	<a href="../index.html" class="navi"><img src="images/nav/flow.png">blog</a>
-  	<a href="new.html" class="navi"><img src="images/nav/flow.png">bio</a>
-		<a href="kao.html" class="navi"><img src="images/nav/flow.png">chat</a>
-		  	<a href="videos.html" class="navi"><img src="images/nav/flow.png">reference</a>
+	<h1 style="margin-bottom:30px;"><img src="../images/home/title0000.png" alt="RE:LIVE" class="img-center img-title"></h1>
+  <img src="../images/nav/navig-main.png" class="naviBanners">
+  	<a href="../index.html" class="navi"><img src="../images/nav/flow.png">blog</a>
+  	<a href="new.html" class="navi"><img src="../images/nav/flow.png">bio</a>
+		<a href="kao.html" class="navi"><img src="../images/nav/flow.png">chat</a>
+		  	<a href="videos.html" class="navi"><img src="../images/nav/flow.png">reference</a>
 
-  <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
-    <a href="anime.html" class="navi"><img src="images/nav/flow.png">projects</a>
-    <a href="blinkies.html" class="navi"><img src="images/nav/flow.png">ani-notes</a>
-    <a href="links.html" class="navi"><img src="images/nav/flow.png">code</a>
-		<a href="buttons.html" class="navi"><img src="images/nav/flow.png">build-guides</a>
-    <a href="videogames.html" class="navi"><img src="images/nav/flow.png">video-games</a>
+  <img src="../images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
+    <a href="anime.html" class="navi"><img src="../images/nav/flow.png">projects</a>
+    <a href="blinkies.html" class="navi"><img src="../images/nav/flow.png">ani-notes</a>
+    <a href="links.html" class="navi"><img src="../images/nav/flow.png">code</a>
+		<a href="buttons.html" class="navi"><img src="../images/nav/flow.png">build-guides</a>
+    <a href="videogames.html" class="navi"><img src="../images/nav/flow.png">video-games</a>
 
 
-  <img src="images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
-    <a href="jotaro.html" class="navi"><img src="images/nav/flow.png">video</a>
-    <a href="art.html" class="navi"><img src="images/nav/flow.png">art</a>
+  <img src="../images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
+    <a href="jotaro.html" class="navi"><img src="../images/nav/flow.png">video</a>
+    <a href="art.html" class="navi"><img src="../images/nav/flow.png">art</a>
 
-  <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
-    <a href="music.html" class="navi"><img src="images/nav/flow.png">music</a>
-  	<a href="videos.html" class="navi"><img src="images/nav/flow.png">videos</a>
+  <img src="../images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
+    <a href="music.html" class="navi"><img src="../images/nav/flow.png">music</a>
+  	<a href="videos.html" class="navi"><img src="../images/nav/flow.png">videos</a>
 
 	<div style="margin:30px 0;">
-	<a href="new.html"><img src="images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
+	<a href="new.html"><img src="../images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
 </div>
 
 <div class="col-sm-12 col-md-9 contentRight">
@@ -61,77 +57,76 @@
       <p>no matter where you go, everyone's connected. welcome to my connection</p>
     </div>
     <div class="col-sm-12">
-      <h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>
-			<img class="logo" src="images/home/ddd.gif" />
+      <h2>the mobile site isnt ready at all... it will be awhile, sorry</h2>
       <div class="row imgPixel">
-				<div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+				<div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
-          <h3 style="margin-bottom:10px;">1/17/20 <img src="images/nav/flow.png" class="new"></h3>
+          <h3 style="margin-bottom:10px;">1/17/20 <img src="../images/nav/flow.png" class="new"></h3>
           <p style="margin-bottom:30px;">pump up the jam. new page.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/8/20 </h3>
           <p style="margin-bottom:30px;">physical reality is nothing but an illusion</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">12/28/19</h3>
           <p style="margin-bottom:30px;">maybe engines will behave today.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/10/19</h3>
           <p style="margin-bottom:30px;">new pages will be done soon... more to come?</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/25/19</h3>
           <p style="margin-bottom:30px;">i stan tron legacy. now you know, i am invalid.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">7/15/19</h3>
           <p style="margin-bottom:30px;">m*necraft server! also @f*ntface sucks.</p>
         </div>
 
-      <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+      <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif"" class="img-center"></div>
       <div class="col-sm-9 col-md-offset-1">
         <h3 style="margin-bottom:10px;">6/30/19</h3>
         <p style="margin-bottom:30px;">hey look <a href="https://artbreeder.com/browse" target="_blank">...art...</a> fancy (∿°○°)∿♡</p>
       </div>
 
         <div class="row imgPixel">
-          <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+          <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
           <div class="col-sm-9 col-md-offset-1">
             <h3 style="margin-bottom:10px;">6/15/19</h3>
             <p style="margin-bottom:30px;">everything that lives is designed to end. we are perpetually trapped in a never-ending spiral of life and death. is this a curse? or some kind of punishment? i often think about the god who blessed us with this cryptic puzzle...and wonder if we'll ever get the chance to kill him.</p>
           </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">3/8/19</h3>
           <p style="margin-bottom:30px;">since this website will inevitably be updated in january of 2020 this entry isn't real.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/18/18</h3>
           <p style="margin-bottom:30px;">welcome to ren's riot of a web space—my official webring to a(rt)nime.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/27/18</h3>
           <p style="margin-bottom:30px;">livin life, shakin strife, wont know, wont go,</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">09/10/18</h3>
           <p style="margin-bottom:30px;">log: a new beginning</p>
@@ -140,7 +135,7 @@
     </div>
 
 	<div class="col-sm-12">
-      <img src="images/home/original.png" style="margin-left:auto;display:block;width:150px;height:auto;margin-top:50px;">
+      <img src="../images/home/original.png" style="margin-left:auto;display:block;width:150px;height:auto;margin-top:50px;">
     </div>
 <!-- InstanceEndEditable -->
 
