--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p style="margin-bottom:30px;">pump up the jam. new page.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/8/20 </h3>
           <p style="margin-bottom:30px;">physical reality is nothing but an illusion</p>
@@ -82,7 +82,7 @@
           <p style="margin-bottom:30px;">maybe engines will behave today.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/10/19</h3>
           <p style="margin-bottom:30px;">new pages will be done soon... more to come?</p>
@@ -94,7 +94,7 @@
           <p style="margin-bottom:30px;">i stan tron legacy. now you know, i am invalid.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">7/15/19</h3>
           <p style="margin-bottom:30px;">m*necraft server! also @f*ntface sucks.</p>
@@ -107,7 +107,7 @@
       </div>
 
         <div class="row imgPixel">
-          <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+          <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
           <div class="col-sm-9 col-md-offset-1">
             <h3 style="margin-bottom:10px;">6/15/19</h3>
             <p style="margin-bottom:30px;">everything that lives is designed to end. we are perpetually trapped in a never-ending spiral of life and death. is this a curse? or some kind of punishment? i often think about the god who blessed us with this cryptic puzzle...and wonder if we'll ever get the chance to kill him.</p>
@@ -119,7 +119,7 @@
           <p style="margin-bottom:30px;">since this website will inevitably be updated in january of 2020 this entry isn't real.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/18/18</h3>
           <p style="margin-bottom:30px;">welcome to ren's riot of a web space—my official webring to a(rt)nime.</p>
@@ -131,7 +131,7 @@
           <p style="margin-bottom:30px;">livin life, shakin strife, wont know, wont go,</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">09/10/18</h3>
           <p style="margin-bottom:30px;">log: a new beginning</p>
