--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="col-sm-12 col-md-3 contentLeft">
 	<h1 style="margin-bottom:30px;"><img src="images/home/title0000.png" alt="RE:LIVE" class="img-center img-title"></h1>
   <img src="images/nav/navig-main.png" class="naviBanners">
-  	<a href="../index.html" class="navi"><img src="images/nav/flow.png">blog</a>
+  	<a href="/blog" class="navi"><img src="images/nav/flow.png">blog</a>
   	<a href="new.html" class="navi"><img src="images/nav/flow.png">bio</a>
 		<a href="kao.html" class="navi"><img src="images/nav/flow.png">chat</a>
 		  	<a href="videos.html" class="navi"><img src="images/nav/flow.png">reference</a>
