--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/8/20 </h3>
-          <p style="margin-bottom:30px;">physical reality is nothing but an illusion</p>
+          <p style="margin-bottom:30px;">physical reality is nothing but a sneaky ninja</p>
         </div>
 
         <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
