--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a href="art.html" class="navi"><img src="images/nav/flow.png">art</a>
 
   <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
-    <a href="music.html" class="navi"><img src="images/nav/flow.png">music</a>
+    <a href="/music" class="navi"><img src="images/nav/flow.png">music</a>
   	<a href="videos.html" class="navi"><img src="images/nav/flow.png">videos</a>
 
 	<div style="margin:30px 0;">
