title change muusic

--- a/music/index.html
+++ b/music/index.html
@@ -6,7 +6,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CD Collection</title>
+    <title>「ｒｅ：Ｌｉｖｅ」</title>
      <link href='https://fonts.googleapis.com/css?family=Raleway:400,700|Merriweather' rel='stylesheet' type='text/css'>
   <style>
 @font-face { font-family: "ebit"; src: url('https://dl.dropboxusercontent.com/s/n9ry4w2f8tl60t3/8bitoperator.ttf'); }
