--- a/music/index.html
+++ b/music/index.html
@@ -333,7 +333,14 @@ div#all {
 
     </div>
   </div>
+  <div class="view view-first">
+    <img src="../images/albulm/coshunie1.jpg">
+    <div class="mask">
+      <h2>Cö Shu Nie - Aurora (2017)</h2>
+      <p>Favorite songs: Asphyxia, Defection, Character</p>
 
+    </div>
+  </div>
 
 
 </center>
