--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       <p>no matter where you go, everyone's connected. welcome to my connection</p>
     </div>
     <div class="col-sm-12">
-      <h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>
+      <!--<h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>-->
+      <img class="logo" style="width:500px;" src="images/home/tumble.png" />
 			<img class="logo" src="images/home/ddd.gif" />
       <div class="row imgPixel">
 				<div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
