--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 		  	<a href="videos.html" class="navi"><img src="images/nav/flow.png">reference</a>
 
   <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
-    <a href="anime.html" class="navi"><img src="images/nav/flow.png">projects</a>
+    <a href="/projects" class="navi"><img src="images/nav/flow.png">projects</a>
     <a href="blinkies.html" class="navi"><img src="images/nav/flow.png">ani-notes</a>
     <a href="links.html" class="navi"><img src="images/nav/flow.png">code</a>
-		<a href="buttons.html" class="navi"><img src="images/nav/flow.png">build-guides</a>
     <a href="videogames.html" class="navi"><img src="images/nav/flow.png">video-games</a>
 
 
