project logs uupdate

--- a/projects/index.html
+++ b/projects/index.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta charset="UTF-8">
-    <title>Playlist Portal :: SURGERY WASTE</title>
+    <title>「ｒｅ：Ｌｉｖｅ」</title>
     <link href="core.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="shortcut icon" href="../favicon.png" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="../images/home/pupilpng.png" sizes="1000x1000" />
 
     <script language="JavaScript" type="text/javascript">
     /*<![CDATA[*/
@@ -37,19 +37,19 @@
 
         <div id="content">
             <p>
-                Playlist central! Sometimes I get an idea for a playlist theme, throw some tracks together in
-                Audacity, make the whole file sound like shit, and then upload it here.
+                Project Central! All/Most/MaybeAFew of the projects i'm working on will be logged here.
+								i will try and keep detailed logs on what i'm working on, and keep them in order, but no promises.
             </p>
 
             <p>
-                Most of these are 'themed' in some way, but there will be semi-regular mixes where
-                I'll just be putting out whatever good shit I'm listening to at the minute.
+                most of these are going to be incomplete, ugly, and dumb. but pr*ct*ce m*kes p*rfect amirite.
+								stars, too, have their own beginnings, but their own power results in their destruction.
             </p>
         </div>
 
 
 		<div id="content">
-            <img class="auditorium" src="art/plQ42019.gif" />
+            <img class="auditorium" src="../images/albulm/eve1.jpg" style="width: 250px;"/>
             <h3 style="float: right; right: 4px;">Year-End Round-Up</h3>
             <p>2 h 24 m</p>
             <ol class="playlist_info">
@@ -66,208 +66,63 @@
                 <li>Cubanate - Oxyacetylene</li>
                 <li>KMFDM - Liebeslied (Edit)</li>
                 <li>ohGr - Suhleap</li>
-                <li>Charli XCX - Femmebot (feat. Dorian Electra, Mykki Blanco)</li>
-                <li>Danny L Harle - Super Natural (feat. Carly Rae Jepsen)</li>
-                <li>Death Grips - Come Up and Get Me</li>
-                <li>Azealia Banks - Heavy Metal and Reflective</li>
-                <li>Front Line Assembly - Antisocial</li>
-                <li>KMFDM - That's All</li>
-                <li>John Carpenter - Wraith (ohGr Remix)</li>
-                <li>A Split-Second - Colonial Discharge</li>
-                <li>Front 242 - Lovely Day</li>
-                <li>Drab Majesty - Silhouette</li>
-                <li>Project Pitchfork - Storm Flower</li>
-                <li>Front 242 - Operating Tracks</li>
-                <li>Godhead - Gimp</li>
-                <li>Randolph &amp; Mortimer - Enjoy More</li>
-                <li>Orgy - Re-Creation</li>
-                <li>Deadstar Assembly - Darker Now</li>
-                <li>Revolting Cocks - Cousins</li>
-                <li>Gothminister - Hatred</li>
-                <li>Children of Bodom - Knuckleduster</li>
-                <li>SOPHIE - Whole New World / Pretend World</li>
             </ol>
 
             <div class="label">
-                <p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/q4-2019/">LISTEN</a></p>
+                <p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/q4-2019/">Read More</a></p>
             </div>
         </div>
 
+				<div id="content">
+								<img class="auditorium" src="../images/albulm/eve1.jpg" style="width: 250px;"/>
+								<h3 style="float: right; right: 4px;">Year-End Round-Up</h3>
+								<p>2 h 24 m</p>
+								<ol class="playlist_info">
+										<li>Revolting Cocks - We Shall Cleanse the World</li>
+										<li>Skinny Puppy - Far Too Frail</li>
+										<li>Meat Beat Manifesto - Psyche-Out (Version 1)</li>
+										<li>Die Krupps - Neue Helden (Leaether Strip Remix)</li>
+										<li>Randolph &amp; Mortimer - Citizens</li>
+										<li>Cubanate - Split Second</li>
+										<li>Celldweller - Switchback</li>
+										<li>Acumen Nation - Coming Down (DJ? Acucrack Batgrabber Mix)</li>
+										<li>Test Dept - Pulsations 1 (Human Run)</li>
+										<li>Nitzer Ebb - Alarm</li>
+										<li>Cubanate - Oxyacetylene</li>
+										<li>KMFDM - Liebeslied (Edit)</li>
+										<li>ohGr - Suhleap</li>
+								</ol>
 
-		<div id="content">
-            <img class="auditorium" src="art/plSep2019.gif" />
-            <h3 style="float: right; right: 4px;">Monthly Gems</h3>
-            <p>37 minutes</p>
+								<div class="label">
+										<p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/q4-2019/">Read More</a></p>
+								</div>
+						</div>
 
-            <ol class="playlist_info">
-				<li>Front 242 - Speed Angels</li>
-				<li>VNV Nation - Cold</li>
-                <li>Death Grips - Three Bedrooms in a Good Neighborhood</li>
-                <li>SOPHIE - Not Okay</li>
-                <li>GFOTY - Poison</li>
-				<li>Revolting Cocks - 38</li>
-                <li>Acumen Nation - Ugly on the Inside</li>
-				<li>Front Line Assembly - Obsession</li>
-                <li>Drab Majesty - Dot in the Sky</li>
-                <li>Boy Harsher - Tears</li>
-            </ol>
+						<div id="content">
+										<img class="auditorium" src="../images/albulm/eve1.jpg" style="width: 250px;"/>
+										<h3 style="float: right; right: 4px;">Year-End Round-Up</h3>
+										<p>2 h 24 m</p>
+										<ol class="playlist_info">
+												<li>Revolting Cocks - We Shall Cleanse the World</li>
+												<li>Skinny Puppy - Far Too Frail</li>
+												<li>Meat Beat Manifesto - Psyche-Out (Version 1)</li>
+												<li>Die Krupps - Neue Helden (Leaether Strip Remix)</li>
+												<li>Randolph &amp; Mortimer - Citizens</li>
+												<li>Cubanate - Split Second</li>
+												<li>Celldweller - Switchback</li>
+												<li>Acumen Nation - Coming Down (DJ? Acucrack Batgrabber Mix)</li>
+												<li>Test Dept - Pulsations 1 (Human Run)</li>
+												<li>Nitzer Ebb - Alarm</li>
+												<li>Cubanate - Oxyacetylene</li>
+												<li>KMFDM - Liebeslied (Edit)</li>
+												<li>ohGr - Suhleap</li>
+										</ol>
 
-            <div class="label">
-                <p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/september-2019/">LISTEN</a></p>
-            </div>
-        </div>
+										<div class="label">
+												<p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/q4-2019/">Read More</a></p>
+										</div>
+								</div>
 
-        <div id="content">
-            <img class="auditorium" src="art/plAug2019.gif" />
-            <h3 style="float: right; right: 4px;">Monthly Gems</h3>
-            <p>46 minutes</p>
-
-            <ol class="playlist_info">
-                <li>Orgy - The Spectrum</li>
-                <li>Revolting Cocks - Touch Screen</li>
-                <li>Charli XCX - Gone (ft. Christine &amp; The Queens)</li>
-                <li>God Module - Evolve</li>
-                <li>Denki Groove - Kao Kawacchatteru</li>
-                <li>Rick Castle - Midnight Lady</li>
-                <li>Front Line Assembly - Body Count</li>
-                <li>Project Pitchfork - Inside</li>
-                <li>Pig - Mobocracy</li>
-                <li>Charli XCX - Taxi</li>
-                <li>Orgy - Promises (Demo)</li>
-            </ol>
-
-            <div class="label">
-                <p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/august-2019/">LISTEN</a></p>
-            </div>
-        </div>
-
-        <div id="content">
-            <img class="auditorium" src="art/plArcade.gif" />
-            <p>32 minutes</p>
-
-            <ol class="playlist_info">
-                <li>Chu Ishikawa - Narrowed Diff</li>
-                <li>Die Krupps - Metal Machine Music</li>
-                <li>En Esch - Sweet Venus</li>
-                <li>The Petty Tyrants - Our Swimmer</li>
-                <li>Death Grips - Hahaha</li>
-                <li>Spider-Man 2 (PC) - Low Health</li>
-                <li>Amelia Arsenic - RX Love</li>
-                <li>Turmion Kätilöt - 4 Käskyä</li>
-                <li>Dark Angels - Right Now</li>
-                <li>Index Code - Canyon Drive</li>
-            </ol>
-
-            <div class="label">
-                <p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/arcade/">LISTEN</a></p>
-            </div>
-        </div>
-
-        <div id="content">
-            <img class="auditorium" src="art/plPlague.gif" />
-            <p>29 minutes</p>
-
-            <ol class="playlist_info">
-                <li>Der Eisenrost - Cootys Rat Semen</li>
-                <li>Pig - Contempt</li>
-                <li>Slipknot - Prosthetics</li>
-                <li>Nine Inch Nails - Wish</li>
-                <li>Pitchshifter - Genius</li>
-                <li>Oomph! - Der Neue Gott</li>
-                <li>Nitzer Ebb - Smear Body</li>
-                <li>Pzychobitch - Upside Down</li>
-                <li>VNV Nation - Sentinel</li>
-            </ol>
-
-            <div class="label">
-                <p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/plague/">LISTEN</a></p>
-            </div>
-        </div>
-
-        <div id="content">
-            <img class="auditorium" src="art/plLatency.gif" />
-            <p>31 minutes</p>
-
-            <ol class="playlist_info">
-                <li>V V Brown - Lazarus</li>
-                <li>Death Grips - Government Plates</li>
-                <li>Razed In Black - Share This Poison</li>
-                <li>Ladytron - The Way That I Found You</li>
-                <li>iamamiwhoami - Chasing Kites</li>
-                <li>Charli XCX - Take My Hand</li>
-                <li>CRIM3S - Salt</li>
-                <li>Grimes - Crystal Ball</li>
-                <li>Q Lazzarus - Goodbye Horses</li>
-            </ol>
-
-            <div class="label">
-                <p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/latency/">LISTEN</a></p>
-            </div>
-        </div>
-
-        <div id="content">
-            <img class="auditorium" src="art/plAnalgesia.gif" />
-            <p>54 minutes</p>
-
-            <div class="playlist_info">
-                <p>PHASE 01: DESPAIR</p>
-                <ol>
-                    <li>Left Spine Down - X-Ray</li>
-                    <li>SOPHIE - Faceshopping</li>
-                    <li>Pain - Let Me Out</li>
-                    <li>ohGr - screwMe</li>
-                </ol>
-                <p>PHASE 02: DEATH</p>
-                <ol>
-                    <li>Death Grips - Runway H</li>
-                    <li>Deathstars - Our God, the Drugs</li>
-                    <li>Zeromancer - Doctor Online</li>
-                    <li>Aesthetic Perfection - Antibody</li>
-                    <li>Orgy - Stitches (P.Q.M.'s Cracker Beat Pass)</li>
-                </ol>
-                <p>PHASE 03: REBIRTH</p>
-                <ol>
-                    <li>Nine Inch Nails - Tetsuo: The Bullet Man</li>
-                    <li>KMFDM - Stray Bullet</li>
-                    <li>The Prodigy - Beyond the Deathray</li>
-                </ol>
-                <p>PHASE 04: POWER</p>
-                <ol>
-                    <li>Front Line Assembly - Mindphaser</li>
-                    <li>Marilyn Manson - Posthuman</li>
-                    <li>Gothminister - March of the Dead</li>
-                </ol>
-                <p>PHASE 05: DECEIT</p>
-                <ol>
-                    <li>Clams Casino - I'm God</li>
-                </ol>
-            </div>
-
-            <div class="label">
-                <p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/analgesia/">LISTEN</a></p>
-            </div>
-        </div>
-<!--
-        <div id="content">
-            <img class="auditorium" src="art/plMidnightWarfare.gif" />
-            <p>32 minutes &mdash; 2.34MB</p>
-
-            <ol class="playlist_info">
-                <li>Pig - The Seven Veils</li>
-                <li>Fear Factory - Freedom or Fire</li>
-                <li>ohGr - Pore</li>
-                <li>Mortiis - Decadent &amp; Desperate</li>
-                <li>Die Krupps - Im falschen Land</li>
-                <li>Grendel - Remnants</li>
-                <li>Pain - Delusions</li>
-                <li>Hollywood Burns - Enter the Yakuza Club</li>
-            </ol>
-
-            <div class="label">
-                <p><a target="_blank" href="mp3/plMidnightWarfare.mp3">LISTEN</a></p>
-            </div>
-        </div>
--->
         <div id="site_entry">
             <p>[ <a href="#">BACK TO TOP</a> ]</p>
         </div>
