--- a/music/index.html
+++ b/music/index.html
@@ -7,6 +7,7 @@
   <head>
     <meta charset="UTF-8">
     <title>「ｒｅ：Ｌｉｖｅ」</title>
+    <link rel="icon" type="image/png" href="../images/home/pupilpng.png" sizes="1000x1000" />
      <link href='https://fonts.googleapis.com/css?family=Raleway:400,700|Merriweather' rel='stylesheet' type='text/css'>
   <style>
 @font-face { font-family: "ebit"; src: url('https://dl.dropboxusercontent.com/s/n9ry4w2f8tl60t3/8bitoperator.ttf'); }
