--- a/projects/index.html
+++ b/projects/index.html
@@ -49,9 +49,9 @@
 
 
 		<div id="content">
-            <img class="auditorium" src="../images/albulm/eve1.jpg" style="width: 250px;"/>
-            <h3 style="float: right; right: 4px;">Year-End Round-Up</h3>
-            <p>2 h 24 m</p>
+            <img class="auditorium" src="../images/projects/suitcase/Suitcase.png" style="width: 250px;"/>
+            <h3 style="float: right; right: 4px;">Suitcase-Computer</h3>
+            <p>1 day</p>
             <ol class="playlist_info">
                 <li>Revolting Cocks - We Shall Cleanse the World</li>
                 <li>Skinny Puppy - Far Too Frail</li>
@@ -60,7 +60,7 @@
                 <li>Randolph &amp; Mortimer - Citizens</li>
                 <li>Cubanate - Split Second</li>
                 <li>Celldweller - Switchback</li>
-                <li>Acumen Nation - Coming Down (DJ? Acucrack Batgrabber Mix)</li>
+                <li>Acumen Nation - Coming Down</li>
                 <li>Test Dept - Pulsations 1 (Human Run)</li>
                 <li>Nitzer Ebb - Alarm</li>
                 <li>Cubanate - Oxyacetylene</li>
@@ -74,54 +74,30 @@
         </div>
 
 				<div id="content">
-								<img class="auditorium" src="../images/albulm/eve1.jpg" style="width: 250px;"/>
-								<h3 style="float: right; right: 4px;">Year-End Round-Up</h3>
-								<p>2 h 24 m</p>
+								<img class="auditorium" src="../images/projects/placeholder/Placeholder.png" style="width: 250px;"/>
+								<h3 style="float: right; right: 4px;">Place-Holder</h3>
+								<p>██████ years</p>
 								<ol class="playlist_info">
-										<li>Revolting Cocks - We Shall Cleanse the World</li>
-										<li>Skinny Puppy - Far Too Frail</li>
-										<li>Meat Beat Manifesto - Psyche-Out (Version 1)</li>
-										<li>Die Krupps - Neue Helden (Leaether Strip Remix)</li>
-										<li>Randolph &amp; Mortimer - Citizens</li>
-										<li>Cubanate - Split Second</li>
-										<li>Celldweller - Switchback</li>
-										<li>Acumen Nation - Coming Down (DJ? Acucrack Batgrabber Mix)</li>
-										<li>Test Dept - Pulsations 1 (Human Run)</li>
-										<li>Nitzer Ebb - Alarm</li>
-										<li>Cubanate - Oxyacetylene</li>
-										<li>KMFDM - Liebeslied (Edit)</li>
-										<li>ohGr - Suhleap</li>
+										<li>Download here: https://███████.com/placeholder</li>
+										<li>Full of kn████dge</li>
+										<li>Enitrely new</li>
+										<li>Connections from ██████ to home.</li>
+										<li>Listen forever, forever, forever</li>
+										<li>███████</li>
+										<li>Explanation explanation explanation explanation</li>
+										<li>Entirely artificial, like the stars</li>
+										<li>Connection 01 - running - failed . . .</li>
+										<li>Not much to see, not much to ████/li>
+										<li>Not connected to the SCP foundation</li>
+										<li>Breathing life, scaling</li>
+										<li>Redacted - █████</li>
 								</ol>
 
 								<div class="label">
-										<p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/q4-2019/">Read More</a></p>
+										<p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/q4-2019/">Read Less</a></p>
 								</div>
 						</div>
 
-						<div id="content">
-										<img class="auditorium" src="../images/albulm/eve1.jpg" style="width: 250px;"/>
-										<h3 style="float: right; right: 4px;">Year-End Round-Up</h3>
-										<p>2 h 24 m</p>
-										<ol class="playlist_info">
-												<li>Revolting Cocks - We Shall Cleanse the World</li>
-												<li>Skinny Puppy - Far Too Frail</li>
-												<li>Meat Beat Manifesto - Psyche-Out (Version 1)</li>
-												<li>Die Krupps - Neue Helden (Leaether Strip Remix)</li>
-												<li>Randolph &amp; Mortimer - Citizens</li>
-												<li>Cubanate - Split Second</li>
-												<li>Celldweller - Switchback</li>
-												<li>Acumen Nation - Coming Down (DJ? Acucrack Batgrabber Mix)</li>
-												<li>Test Dept - Pulsations 1 (Human Run)</li>
-												<li>Nitzer Ebb - Alarm</li>
-												<li>Cubanate - Oxyacetylene</li>
-												<li>KMFDM - Liebeslied (Edit)</li>
-												<li>ohGr - Suhleap</li>
-										</ol>
-
-										<div class="label">
-												<p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/q4-2019/">Read More</a></p>
-										</div>
-								</div>
 
         <div id="site_entry">
             <p>[ <a href="#">BACK TO TOP</a> ]</p>
