--- a/music/index.html
+++ b/music/index.html
@@ -318,6 +318,24 @@ div#all {
   transform: scale(1);
   opacity: 1;
 }
+::-webkit-scrollbar {
+		width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+		background: #222;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+		background: #111;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+		background: #555;
+}
 
 </style>
   </head>
