--- a/projects/index.html
+++ b/projects/index.html
@@ -94,7 +94,7 @@
 								</ol>
 
 								<div class="label">
-										<p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/q4-2019/">Read Less</a></p>
+										<p><a target="_blank" href="/placeholder">Read Less</a></p>
 								</div>
 						</div>
 
